# gs2canvas

./: .gitignore  README.md  app.py  gs2canvas.py  gs2canvas_test.py  pyproject.toml
.github/workflows/: pytest.yml
data/: canvas_import.csv  gs_responses.csv  missing_students.csv  student_db.csv
